--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,15 @@ package-mode = false
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry.dependencies]
+python = ">=3.10,<3.15"
+pandas = "^2.3.3"
+torch = "^2.9.1"
+lightgbm = "^4.6.0"
+scikit-learn = "^1.7.2"
+tqdm = "^4.67.1"
+transformers = "^4.57.3"
+
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.14.3"
 pre-commit = "^4.3.0"
